scaffold rental model

--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -5,5 +5,5 @@
     <p>Manage your rental properties all in one place.</p>
     <p>Do more, Save more</p>
   </div>
-
+<%= link_to 'Rentals', rentals_path %>
 </div>
