--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -2,18 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body {
-  background-image: url('house');
-  background-size: cover;
-}
-
-.content {
-  background-color: black;
-  opacity: 0.7;
-  overflow: hidden;
-}
-
-h1, h4, .desc {
-  text-align: center;
-  color: white;
-}
+// body {
+//   background-image: url('house');
+//   background-size: cover;
+// }
+//
+// .content {
+//   background-color: black;
+//   opacity: 0.7;
+//   overflow: hidden;
+// }
+//
+// h1, h4, .desc {
+//   text-align: center;
+//   color: white;
+// }
