Add child unit of rental and build dynamic

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,9 @@
   <div class="navbar-fixed">
     <nav class="transparent">
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Rent Me</a>
+        <a href="rentals_path" class="brand-logo">Rent Me</a>
         <ul class="right hide-on-med-and-down">
+          <li><%=  link_to 'Rentals', rentals_path %></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Team</a></li>
           <li><a href="#">Contact</a></li>
